# timeSplit

./: .gitignore  LICENSE  Main.hs  Parser.hs  README.md  TimeSplit.hs  timeSplit.cabal
app/: Main.hs
src/: Audio.hs  Parser.hs  Types.hs
