cabal-version:      2.4
name:               timeSplit
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             lamekino

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: README.md

library
  build-depends:
      base >= 4 && < 5
    , split
    , process
  hs-source-dirs:
    src
  exposed-modules:
    Audio
    Types
    Parser
  ghc-options: -Wall


executable timesplit
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0
      , timeSplit

    hs-source-dirs:   app
    ghc-options: -Wall
    default-language: Haskell2010
